Feat: Implement detailed purification output and status display

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "h2o-plus-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Vigux.github.io/h2o-plus-app",
+  "homepage": "https://VIKASH500.github.io/h2o-plus-app",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
